# ProblemSet2020

./: .gitignore  CMakeLists.txt  My_stl.h  Readme.md  bs_recursion.cpp  bs_unrecursion.cpp  codeup_1934.cpp  codeup_5901.cpp  d_Q.cpp  data1_out.txt  data2.txt  data2_out.txt  data_generation.cpp  hanoi.cpp  hash_test.cpp  math_integer_test.cpp  pat_a_1025.cpp  pat_b1001.cpp  pat_b1032.cpp  sort.cpp  sort.txt  sorting.cpp  string_hash.cpp  test2.cpp  test_data.txt  times.cpp
Acm-icpc/: permutation.cpp  triangle_test.cpp
Acm-icpc/search/: sumK.cpp
Archive/DS_PTA_solutions/: BinaryTree1.cpp  BinaryTree10.cpp  BinaryTree11.cpp  BinaryTree2.cpp  BinaryTree3.cpp  BinaryTree4.cpp  BinaryTree5.cpp  BinaryTree6.cpp  BinaryTree7.cpp  BinaryTree8.cpp  BinaryTree9.cpp  Decodeing.cpp  JosephCircle.cpp  KMP1.cpp  SpecialQueue.cpp  Subset.cpp
Archive/MyWork/: GraphADT.cpp  Sort.cpp  Sort_algorithms.cpp  list.cpp  mid_exp_val.cpp
Archive/NOI/: id_1696_polish.cpp
Archive/TestData/: P1629_1.txt  data1.txt  data1_out.txt  data2.txt  data2_out.txt  grade.txt  sort.txt  test_data.txt
Archive/regexp/: regex_2.cpp  regex_def.h  regex_t1.cpp
C_final/: Quiz1.cpp  Quiz3.cpp
C_final/ReviewDir/: 2017a.cpp  2017b.cpp  2018a.cpp  2018b.cpp  bin_search.cpp  combination.cpp  csort.cpp  delete_same.cpp  list_del.cpp  list_review1.cpp  list_review2.cpp  list_review3.cpp  paper_list2.cpp  paper_list3.cpp  paperlist4.cpp  triangle_cnt.cpp  triangle_in.in
C_final/final_test/: Quiz1.cpp  Quiz2.cpp  Quiz4.cpp  Quiz5.cpp  quiz_test.cpp  recursion.cpp
DS_PTA_solutions/: BinaryTree11.cpp  BinaryTree5.cpp  BinaryTree7.cpp  BinaryTree8.cpp  BinaryTree9.cpp  JosephCircle.cpp  KMP1.cpp  SpecialQueue.cpp  Subset.cpp
FSM/: fsm_lift.c
HDUOJ/: process.md
HDUOJ/10_28/: id_2001.cpp  id_2006.cpp  id_2008.cpp  id_2010.cpp
HDUOJ/10_29/: id_2021.cpp
HDUOJ/10_30/: id_2029.cpp
HDUOJ/10_31/: id_2034_1.cpp  id_2034_3.cpp  id_2034_4.cpp
HDUOJ/11_3/: id_2043.cpp
LEETCODE/: 101.cpp  102.cpp  104.cpp  105.cpp  107.cpp  110.cpp  144.cpp  145.cpp  199.cpp  222.cpp  404.cpp  513.cpp  589.cpp  637.cpp  94.cpp
LEETCODE/binaryTree/: 101.cpp  106.cpp  107.cpp  110.cpp  111.cpp  112.cpp  113.cpp  144.cpp  145.cpp  199.cpp  226.cpp  257.cpp  501.cpp  513.cpp  530.cpp  538.cpp  589.cpp  617.cpp  654.cpp  700.cpp  98.cpp
LGOJ/Graph/: p1144_shortpath_cnt_bfs.cpp  p1396_rescure_kruskal.cpp  p1807_longestpath_floyd.cpp  p3366_mst_prim_-Oheap.cpp  p4017_foodchain_toposort_iter.cpp  p4479_dijkstra_-own_-Oheap.cpp  p4779_dijkstra_-Oheap.cpp  p5318_graph_travesal_dfs_bfs.cpp
LGOJ/Recursions/: p1255_count_stairs.cpp
LGOJ/TestData/: P1195_1.in  p1195.in
MyWork/: GraphADT.cpp  Sort.cpp  Sort_algorithms.cpp  Union_find.cpp  list.cpp  mid_to_post_exp.cpp
MyWork/finished/: Binary_tree.cpp  Brute_force_string.cpp  Match.cpp  My_Union_find.cpp  My_list.cpp  My_pair.cpp  My_priority_queue.cpp  My_qsort.cpp  My_qsort_kr.cpp  My_stack.cpp  My_vector.cpp  Union_find.cpp  pair.cpp  queue.cpp  stack.cpp
NOI/: id_1696_polish.cpp
PTA_solutions/: BinaryTree1.cpp  BinaryTree10.cpp  BinaryTree11.cpp  BinaryTree2.cpp  BinaryTree3.cpp  BinaryTree4.cpp  BinaryTree5.cpp  BinaryTree6.cpp  BinaryTree7.cpp  Decodeing.cpp
Regex/: regex_def.h  regex_t1.cpp
TestData/: P1629_1.txt  data1.txt  data2.txt  data2_out.txt  grade.txt
acm-icpc/: combination.cpp
acm-icpc/search/: sumK.cpp
algo_notes/: codeup_1928.cpp  pat_a_1025.cpp  pat_b1009.cpp  pat_b1022.cpp  pat_b1036.cpp
algo_notes_book/: codeup_1934.cpp  d_Q.cpp  pat_b1001.cpp  pat_b1032.cpp  z_o_backpack.cpp
algo_notes_book/Qs/: codeup_1928.cpp  pat_a_1025.cpp  pat_b1036.cpp  sorting.cpp
algo_notes_book/graph/: adj_table.cpp  my_graph_test.cpp  pat_a1034_headOfGang.cpp  topo_sort.cpp
course_design_ds/: pta1.cpp  pta2.cpp  test.cpp  test.txt  trie.cpp  trie2.cpp
courses/: Matrix.cpp  add_element.c  bs_unrecursion.cpp  delete_seq.cpp  graph_test.cpp  mid_to_post.cpp  post_val.cpp  put_string.c  remove_item.cpp  reverse_list.cpp  shift_array.cpp  string_hash.cpp
courses/DS/: big_integer.cpp  delete_m_in_stack.cpp  graph_test.cpp  mid_to_post.cpp
dsacpp/queen/: N_Queen.cpp  N_Queen_recursion.cpp  func.cpp  func_it.cpp  main.cpp  main_it.cpp  queen.h  queen_it.h  queen_stk.h
else/: add_element.c  add_element.cpp  bracket_matching.cpp  d_Q_stack.cpp  hash_string.cpp  hash_string2.cpp  hash_test.cpp  list_befor_n.cpp  math_integer_test.cpp  remove_item.cpp  shift_array.cpp
hduOJ/: id_2006.cpp  id_2009.cpp  id_2011.cpp  id_2020.cpp  id_2022.cpp  id_2025.cpp  id_2032.cpp  id_2033.cpp  id_2034_2.cpp  id_2036_1.cpp  id_2036_2.cpp  process.md
hduOJ/10_28/: id_2000.cpp  id_2002.cpp  (+4 more)
homework/: Q1_list.cpp  Q2_stack.cpp  Q4_stringpattern.cpp  Q5.cpp  Q5_treebuild.cpp  Q6_findfather.cpp  Q7_delete_subtree.cpp  W1_Q1.cpp  W1_Q1_link.cpp  W1_Q1_list.cpp  W1_Q2.cpp  W1_Q3.cpp  W1_Q3.cpp~  W1_Q4.cpp  W1_Q4.in  a.out
leetcode_solutions/: 105_note.cpp  traversal.cpp
lgOJ/: p1807_bellman.cpp  p1807_longestpath.cpp  p1807_spfa.cpp  p3375_kmp.cpp  p3961_graph_tra.cpp  p3961_graph_tra_reverse_dfs.cpp  p4017_foodchain.cpp  p4391.cpp  p4391_kmp.cpp  p4779_Dijkstra_-Oheap.cpp  p4913_bitree.cpp  p5318_graph_travesal.cpp
(+208 files in other folders)
