#cmake_minimum_required(VERSION 3.17)
#project(PROBLEMSET)
#
#set(CMAKE_CXX_STANDARD 11)
#
#add_executable(w1_q1 homework/week1/W1_Q1_list.cpp)
#add_executable(adi_t algo_notes_book/graph/adj_table.cpp)
#add_executable(pat_a1034 algo_notes_book/graph/pat_a1034_headOfGang.cpp)
#add_executable(mygraph algo_notes_book/graph/my_graph_test.cpp)
#add_executable(topo_sort algo_notes_book/graph/topo_sort.cpp)
#add_executable(g_test courses/graph_test.cpp)
#add_executable(W2_Q1 homework/week2/W2_Q1.cpp)
#add_executable(W3_Q1_n homework/week3/W3_Q1.cpp)
#add_executable(p4913 lgOJ/p4913_bitree.cpp)
#
#add_executable(w2_q2 homework/week2/W2_Q2_dfs.cpp)
#
#add_executable(W3_Q2 homework/week3/W3_Q2.cpp)
#add_executable(W3_Q3 homework/week3/W3_Q3.cpp)
#add_executable(W3_Q4 homework/week3/W3_Q4.cpp)
#add_executable(Q4 homework/week3/Q4_test.cpp)
#
#add_executable(quuen_r dsacpp/queen/N_Queen.cpp)
#add_executable(queen_it dsacpp/queen/N_Queen_recursion.cpp)
#
#add_executable(package algo_notes_book/Qs/z_o_backpack.cpp)
#add_executable(huffman homework/week4/huffman_tree.cpp)
#add_executable(expression homework/week4/expression_tree.cpp)
#add_executable(union_f homework/week4/union_find.cpp)
#add_executable(dij homework/week5/W5_Q1.cpp)
#add_executable(dij_oop homework/week5/Graph.cpp)
#add_executable(floyd homework/week5/Floyd.cpp)
#add_executable(key_p homework/week5/Key_path.cpp)
#add_executable(q2 homework/week5/W5_Q2.cpp)
#add_executable(q3 homework/week5/W5_Q3.cpp)
#add_executable(Q8 homework/daily/Q8_graph_show.cpp)
#add_executable(Q9 homework/daily/Q9_graph_del.cpp)
#add_executable(Q10 homework/daily/Q10_sort.cpp)
#add_executable(w1c homework/week1/W1_C.cpp)
#add_executable(w1d homework/week1/W1_Q4.cpp)
#add_executable(w2c homework/week2/W2_C.cpp)
#add_executable(w2e homework/week2/W2_E.cpp)
#add_executable(w2b homework/week2/W2_B.cpp)
#add_executable(w5b homework/week5/W5_C.cpp)
#add_executable(w5q4 homework/week5/W5_Q4.cpp)
#add_executable(w6q1 homework/week6/W6_Q1_kruskal.cpp)
#add_executable(w6q1_2 homework/week6/W6_Q1_prim_1.cpp)
#add_executable(w6q1_3 homework/week6/W6_Q1_prim_2.cpp)
#add_executable(w6q2 homework/week6/W6_Q2_dfs.cpp)
#add_executable(w6q3 homework/week6/W6_Q3.cpp)
#add_executable(w6t homework/week6/test.cpp)
#add_executable(w62_bfs homework/week6/W6_Q2_bfs.cpp)
#add_executable(w6q3dfs homework/week6/W6_Q3_dfs.cpp)
#

cmake_minimum_required(VERSION 3.15)
project(PROBLEMSET)

set(CMAKE_CXX_STANDARD 11)

# 遍历项目根目录下所有的 .cpp 文件
file (GLOB files *.cpp */*.cpp */*/*.cpp )
foreach (file ${files})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
    add_executable (${exe} ${file})
    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
endforeach ()

#file (GLOB_RECURSE files *.cpp)